--- a/SiroTorres/MetodologiaEnSistemas/Java/Clase 7/Leccion03/tienda_libros/src/main/java/utn/tienda_libros/vista/LibroFrom.form
+++ b/SiroTorres/MetodologiaEnSistemas/Java/Clase 7/Leccion03/tienda_libros/src/main/java/utn/tienda_libros/vista/LibroFrom.form
@@ -129,7 +129,7 @@
           <grid row="5" column="3" row-span="1" col-span="1" vsize-policy="6" hsize-policy="1" anchor="0" fill="2" indent="0" use-parent-layout="false"/>
         </constraints>
       </vspacer>
-      <component id="ebb8" class="javax.swing.JButton" default-binding="true">
+      <component id="ebb8" class="javax.swing.JButton" binding="modificarButton">
         <constraints>
           <grid row="4" column="3" row-span="1" col-span="1" vsize-policy="0" hsize-policy="3" anchor="0" fill="0" indent="0" use-parent-layout="false"/>
         </constraints>
